# TracKourse

./: .env.example  .flake8  .gitignore  .txt  README.md  alert_test.py  class_info.py  const_config.py  driver_installation.py  driver_installation_methods.py  install_drivers.py  main.py  mainv2.py  package.json  pyproject.toml  raw_test.py  requirements.txt  resultsTesting.txt  trackourse_config.ini  v2_workbench.py  v2standardized  v2standardized.txt  v2test.txt  webpage_elements.txt  webpage_elements_success.txt
comparison_logs/: aggregated.txt  post-standardization.txt  pre-standardization.txt  webpage_elements_fail.txt
nonmodify/: alert_handler.py  class_info.py  driver_installation_methods.py  email_handler.py  logger_helper.py  process_classes.py  process_classes_v2.py  web_info.py  web_info_v2.py
src/trackourse/: alert_test.py  app.py  const_config.py  main.py
src/trackourse/nonmodify/: alert_handler.py  config_handler.py  frontend_helper.py  process_classes.py  web_info.py
tests/: test_process.py  test_url_gen.py
v1_archive/: install_drivers.py  main.py  process_classes.py
