[project]
name = "TracKourseASU"
version = "0.1.0"
description = "Registration course tracker for ASU"
authors = [
    {name = "Aidan Yung", email = "ltcolscotty@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11.5"

[build-system]
requires = ["setuptools>=61.0", "wheel", "pyinstaller"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pyinstaller", "pytest"]

[project.scripts]
trackourse-run = "trackourse.main:main"
trackourse-notiftest = "trackourse.alert_test:ping"

[tool.pyinstaller]
onefile = true
windowed = false
console = true

[tool.pytest]
testpaths = ["tests"]

[tool.pytest.ini_options]
pythonpath = ["src/trackourse"]